--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-Install the following library(if not satisfied):
-pip install flask transformers torch
-pip install --upgrade flask transformers torch
-
-
-Import the following libraries:
-from flask import Flask, request, jsonify
-from transformers import AutoTokenizer, AutoModelForTokenClassification, pipeline
-import numpy as np
-import logging
-from datetime import datetime
-import json
+flask
+transformers
+torch
+numpy
+logging
+datetime
+json
