--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-flask
-transformers
-torch
-numpy
+fastapi==0.73.0
+uvicorn==0.17.0
+transformers==4.11.3
+torch==1.10.0
+numpy==1.21.2
+requests==2.26.0
+flask==2.0.2
